--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: PlumPantry_development
+  database: plumpantry_development
   pool: 5
   username: T-Virus
   password:
